--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ nav {
   text-align: center;
 }
 
-nav .fa-bars {
+nav .fa-bars,
+nav .fa-times {
   display: none;
   color: #fff;
   font-size: 40px;
@@ -600,6 +601,7 @@ div.footer {
   /* section header */
   header {
     min-height: 40vh;
+    position: relative;
   }
 
 
@@ -607,8 +609,31 @@ div.footer {
     display: block;
   }
 
+  nav .fa-times {
+    position: absolute;
+    z-index: 3;
+  }
+
   nav ul {
     display: none;
+    position: absolute;
+    background-color: #e94f3d;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    padding-top: 20%;
+    box-sizing: border-box;
+  }
+
+  nav ul li {
+    display: block;
+  }
+
+  nav ul li a:hover {
+    border-color: transparent;
   }
 
   .logo {
