--- a/style.css
+++ b/style.css
@@ -622,9 +622,8 @@ div.footer {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    width: 100%;
-    height: 100%;
-    padding-top: 20%;
+    width: 70%;
+    height: 80%;
     box-sizing: border-box;
   }
 
@@ -637,13 +636,19 @@ div.footer {
   }
 
   .logo {
-    margin: 0 auto;
-    width: 60%;
+    width: 50%;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   button.button-1 {
     font-size: 22px;
-    margin-top: 50px
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .icon {
@@ -865,8 +870,7 @@ div.footer {
   /* section header */
 
   .logo {
-    margin: 50px auto;
-    width: 70%;
+    width: 60%;
   }
 
   /* section favorites */
@@ -1042,6 +1046,19 @@ div.footer {
     position: relative;
   }
 
+  nav ul {
+    display: none;
+    position: absolute;
+    background-color: #e94f3d;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    padding-top: 20%;
+    box-sizing: border-box;
+  }
 
   .logo {
     position: absolute;
