--- a/style.css
+++ b/style.css
@@ -107,6 +107,12 @@ section.description {
   width: 500px;
 }
 
+div.description-right img {
+  margin-top: 100px;
+  width: 100%;
+}
+
+
 h1 {
   margin-top: 70px;
   font-family: 'Righteous', cursive;
@@ -124,7 +130,7 @@ img.decor {
   word-spacing: 3px;
   line-height: 25px;
   margin-top: 25px;
-  font-size: 17px;
+  font-size: 18px;
   font-family: 'Open Sans', sans-serif;
   color: rgb(102, 102, 102);
   font-weight: 400;
@@ -224,7 +230,7 @@ section.eat {
 }
 
 .eat div h2 {
-  font-size: 24px;
+  font-size: 26px;
   font-family: 'Righteous', cursive;
   margin-top: 75px;
   color: #333;
@@ -233,7 +239,7 @@ section.eat {
 
 .eat div p {
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   color: rgb(102, 102, 102);
 }
 
@@ -327,6 +333,7 @@ button.button-2:hover {
   margin: 0 10px 10px 10px;
   font-family: 'Open Sans', sans-serif;
   color: rgb(102, 102, 102);
+  font-size: 18px;
 
 }
 
@@ -345,7 +352,7 @@ button.button-2:hover {
   font-family: 'Open Sans', sans-serif;
   color: rgb(51, 51, 51);
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
 }
 
@@ -392,13 +399,13 @@ button.button-3:hover i.fa-chevron-right {
   color: white;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .learn-more h2 {
   color: white;
   font-family: 'Righteous', cursive;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 400;
   margin-bottom: 10px;
 }
@@ -452,7 +459,7 @@ button.button-4:hover i.fa-chevron-right {
   margin: 20px;
   border-radius: 15px;
   font-family: 'Righteous', cursive;
-  font-size: 20px;
+  font-size: 26px;
   padding: 5px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px;
 }
@@ -479,7 +486,7 @@ button.button-4:hover i.fa-chevron-right {
 .restaurants .wrap div p {
   font-family: 'Open Sans', sans-serif;
   color: rgb(102, 102, 102);
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .restaurants .wrap div a {
@@ -489,7 +496,7 @@ button.button-4:hover i.fa-chevron-right {
   color: #e94f3d;
   text-decoration: none;
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* footer */
@@ -504,6 +511,7 @@ footer .wrap>div {
   color: #fff;
   font-family: 'Open Sans', sans-serif;
   margin: 20px 15px 0 15px;
+  font-size: 18px;
 }
 
 footer .wrap div img {
@@ -541,6 +549,7 @@ footer .wrap .iconsoc {
 .form h2 {
   font-family: 'Righteous', cursive;
   font-weight: 400;
+  font-size: 26px;
 }
 
 form {
@@ -576,6 +585,7 @@ button.button-6 {
 .address h2 {
   font-family: 'Righteous', cursive;
   font-weight: 400;
+  font-size: 26px;
 }
 
 .address div {
@@ -644,7 +654,6 @@ div.footer {
   }
 
   button.button-1 {
-    font-size: 22px;
     position: absolute;
     bottom: 10%;
     left: 50%;
@@ -659,7 +668,6 @@ div.footer {
   /* section description */
 
   .description p {
-    font-size: 22px;
     line-height: 30px;
   }
 
@@ -667,6 +675,14 @@ div.footer {
     margin: 0 20px;
   }
 
+  div.description-left {
+    width: 100%;
+    padding: 0 20px;
+  }
+
+  div.description-right {
+    display: none;
+  }
 
   /* section types-of-food */
   .type-of-food:hover {
@@ -689,21 +705,12 @@ div.footer {
 
   /* section eat */
 
-  .eat div h2 {
-    font-size: 24px;
-  }
-
-  .eat div p {
-    font-size: 22px;
-  }
-
   .decor-small {
     width: 95%;
     padding: 5px 0 15px 0;
   }
 
   button.button-2 {
-    font-size: 22px;
     margin-top: 50px
   }
 
@@ -712,11 +719,6 @@ div.footer {
   .dishes>div {
     width: 100%;
     margin: 20px;
-  }
-
-  .dishes p {
-    font-size: 20px;
-
   }
 
   .dishes img {
@@ -728,27 +730,13 @@ div.footer {
   /* section opinion */
 
   .opinion {
-    font-size: 22px;
     padding: 0 20px;
-  }
-
-  button.button-3 {
-    font-size: 22px;
   }
 
   /* section lear more  */
 
-
-  .learn-more div {
-    font-size: 22px;
-  }
-
   .learn-more p {
     padding: 0 20px;
-  }
-
-  button.button-4 {
-    font-size: 22px;
   }
 
   /* section restaurants */
@@ -761,13 +749,6 @@ div.footer {
     width: 15%;
   }
 
-  .restaurants .wrap div p {
-    font-size: 22px;
-  }
-
-  .restaurants .wrap div a {
-    font-size: 22px;
-  }
 
   /* section footer */
 
@@ -793,9 +774,6 @@ div.footer {
     margin: 25px 10px;
   }
 
-  footer .form p {
-    font-size: 20px;
-  }
 }
 
 @media (max-width: 900px) {
@@ -807,12 +785,7 @@ div.footer {
   }
 
   .eat div h2 {
-    font-size: 28px;
     margin-top: 50px;
-  }
-
-  .eat div p {
-    font-size: 22px;
   }
 
   .decor-small {
@@ -853,21 +826,6 @@ div.footer {
     width: 25%;
   }
 
-  .restaurants .wrap div p {
-    font-size: 22px;
-  }
-
-  .restaurants .wrap div a {
-    font-size: 22px;
-  }
-
-  .restaurants .wrap div h3 {
-    font-size: 22px;
-  }
-
-  .restaurants .wrap div h4 {
-    font-size: 22px;
-  }
 }
 
 
@@ -881,11 +839,6 @@ div.footer {
 
   /* section favorites */
 
-  .dishes p {
-    font-size: 22px;
-
-  }
-
   .dishes img {
     width: 40%;
   }
@@ -897,14 +850,6 @@ div.footer {
   }
 
   /* section eat  */
-
-  .eat div h2 {
-    font-size: 30px;
-  }
-
-  .eat div p {
-    font-size: 26px;
-  }
 
   .decor-small {
     width: 70%;
@@ -926,15 +871,6 @@ div.footer {
 @media (max-width: 600px) {
   /* section favorites */
 
-  .dishes h3 {
-    font-size: 30px;
-
-  }
-
-  .dishes p {
-    font-size: 24px;
-  }
-
   .dishes img {
     width: 100%;
     float: none;
@@ -949,14 +885,6 @@ div.footer {
 
   /* section description */
 
-  h1 {
-    font-size: 33px;
-  }
-
-  .description p {
-    font-size: 26px;
-  }
-
   footer .wrap>div {
     width: 70%;
     margin: 20px auto;
@@ -964,23 +892,6 @@ div.footer {
 
   footer {
     padding-bottom: 20px;
-  }
-
-  footer .address p {
-    font-size: 24px;
-  }
-
-  footer .address h2 {
-    font-size: 30px;
-  }
-
-
-  footer .form h2 {
-    font-size: 30px;
-  }
-
-  footer .form p {
-    font-size: 24px;
   }
 
   footer .wrap .iconsoc {
@@ -1006,41 +917,6 @@ div.footer {
     margin: 0 auto;
   }
 
-  .restaurants .wrap div h3 {
-    font-size: 32px;
-  }
-
-  .restaurants .wrap div h4 {
-    font-size: 30px;
-  }
-
-  .restaurants .wrap div p {
-    font-size: 28px;
-  }
-
-  /* section opinion */
-  .opinion {
-    font-size: 28px;
-  }
-
-
-  /* section learn-more*/
-
-  .learn-more div {
-    font-size: 28px;
-  }
-
-  button.button-3 {
-    font-size: 24px;
-  }
-
-  button.button-4 {
-    font-size: 24px;
-  }
-
-  .restaurants .wrap div a {
-    font-size: 28px;
-  }
 }
 
 @media (max-width: 500px) {
@@ -1118,17 +994,14 @@ div.footer {
   }
 
   .restaurants .wrap div h3 {
-    font-size: 32px;
     padding: 0 15px;
   }
 
   .restaurants .wrap div h4 {
-    font-size: 30px;
     padding: 0 15px;
   }
 
   .restaurants .wrap div p {
-    font-size: 28px;
     padding: 0 15px;
   }
 
