--- a/style.css
+++ b/style.css
@@ -345,19 +345,48 @@ button.button-2:hover {
   margin: 30px 0;
 }
 
+.fa-chevron-up,
+.fa-chevron-down {
+  cursor: pointer;
+}
+
+.fa-chevron-down {
+  margin-top: 30px;
+}
+
 .opinion {
-  width: 1000px;
-  margin: 30px auto 0 auto;
+  width: 100%;
   line-height: 30px;
   font-family: 'Open Sans', sans-serif;
   color: rgb(51, 51, 51);
   text-align: center;
   font-size: 18px;
   font-weight: 400;
+  visibility: hidden;
+  height: 0;
+  opacity: 0;
+  transition: 1s;
+}
+
+.show-opinion {
+  visibility: visible;
+  opacity: 1;
+  transition: 1s;
+  height: auto;
+  margin: 30px auto 0 auto;
+}
+
+.blocked-arrow {
+  color: #aaa;
+  cursor: default;
 }
 
 .opinion img {
   padding: 15px 0;
+}
+
+.btndiv {
+  width: 100%;
 }
 
 button.button-3 {
@@ -373,19 +402,10 @@ button.button-3 {
   transition: .3s;
 }
 
-i.fa-chevron-right {
-  margin-left: 7px;
-  opacity: 0;
-  transition: .3s;
-}
-
 button.button-3:hover {
   background-color: rgb(180, 43, 43);
 }
 
-button.button-3:hover i.fa-chevron-right {
-  opacity: 1;
-}
 
 /* section 6  */
 
