--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 body {
   background-color: #f5f5f5;
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+  color: rgb(102, 102, 102);
 }
 
 .wrap {
@@ -13,6 +16,18 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+.button {
+  display: block;
+  background-color: #e94f3d;
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  transition: 0.3s;
+  padding: 10px 20px;
 }
 
 /* header */
@@ -50,9 +65,7 @@ nav ul li {
 nav ul li a {
   display: block;
   margin: 30px;
-  padding: 0 30px 10px 30px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
+  padding: 0 20px 10px 20px;
   font-weight: 700;
   color: white;
   text-decoration: none;
@@ -73,17 +86,8 @@ nav ul li a:hover {
   width: 40%;
 }
 
-button.button-1 {
-  display: block;
+button.btn1 {
   margin: 30px auto 0 auto;
-  padding: 10px 20px;
-  background-color: #e94f3d;
-  font-size: 18px;
-  font-weight: 700;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  transition: 0.3s;
 }
 
 .icon {
@@ -91,12 +95,12 @@ button.button-1 {
   margin-left: 5px;
 }
 
-button:hover {
+.btn1:hover {
   background-color: rgb(180, 43, 43);
 }
 
 
-/* section 1 */
+/* section description */
 
 section.description {
   overflow: hidden;
@@ -130,15 +134,11 @@ img.decor {
   word-spacing: 3px;
   line-height: 25px;
   margin-top: 25px;
-  font-size: 18px;
-  font-family: 'Open Sans', sans-serif;
-  color: rgb(102, 102, 102);
-  font-weight: 400;
   text-align: center;
 }
 
 
-/* section 2 */
+/* section types-of-food */
 
 .types-of-food {
   width: 100%;
@@ -212,13 +212,12 @@ img.decor {
   transition: .5s;
 }
 
-/* section 3 */
+/* section eat */
 
 section.eat {
   margin-top: 50px;
   width: 100%;
 }
-
 
 .eat .wrap div {
   box-sizing: border-box;
@@ -235,12 +234,6 @@ section.eat {
   margin-top: 75px;
   color: #333;
   font-weight: 400;
-}
-
-.eat div p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-  color: rgb(102, 102, 102);
 }
 
 .decor-small {
@@ -272,24 +265,15 @@ section.eat {
   background-position: 50% 0;
 }
 
-button.button-2 {
-  display: block;
+button.btn2 {
   margin: 80px auto 50px auto;
-  background-color: #e94f3d;
-  border: none;
-  font-size: 18px;
-  padding: 10px 20px;
-  border-radius: 20px;
-  color: white;
-  font-weight: 700;
-  transition: 0.3s;
 }
 
-button.button-2:hover {
+button.btn2:hover {
   background-color: rgb(180, 43, 43);
 }
 
-/* section 4  */
+/* section favorites  */
 
 .favorites {
   width: 100%;
@@ -331,17 +315,12 @@ button.button-2:hover {
 
 .dishes p {
   margin: 0 10px 10px 10px;
-  font-family: 'Open Sans', sans-serif;
-  color: rgb(102, 102, 102);
-  font-size: 18px;
-
 }
 
-/* section 5 */
+/* section opinion */
 
 .opinions {
   width: 100%;
-  /* height: 50vh; */
   margin: 30px 0;
 }
 
@@ -357,11 +336,8 @@ button.button-2:hover {
 .opinion {
   width: 100%;
   line-height: 30px;
-  font-family: 'Open Sans', sans-serif;
   color: rgb(51, 51, 51);
   text-align: center;
-  font-size: 18px;
-  font-weight: 400;
   visibility: hidden;
   height: 0;
   opacity: 0;
@@ -389,25 +365,16 @@ button.button-2:hover {
   width: 100%;
 }
 
-button.button-3 {
-  display: block;
+button.btn3 {
   margin: 30px auto 0 auto;
-  background-color: #e94f3d;
-  border: none;
-  font-size: 18px;
-  padding: 10px 20px;
-  border-radius: 20px;
-  color: white;
-  font-weight: 700;
-  transition: .3s;
 }
 
-button.button-3:hover {
+button.btn3:hover {
   background-color: rgb(180, 43, 43);
 }
 
 
-/* section 6  */
+/* section learn-more  */
 
 .learn-more {
   background-color: #e94f3d;
@@ -417,9 +384,7 @@ button.button-3:hover {
 
 .learn-more div {
   color: white;
-  font-family: 'Open Sans', sans-serif;
   text-align: center;
-  font-size: 18px;
 }
 
 .learn-more h2 {
@@ -430,17 +395,9 @@ button.button-3:hover {
   margin-bottom: 10px;
 }
 
-button.button-4 {
-  display: block;
+button.btn4 {
   margin: 30px auto 0 auto;
   background-color: #004751;
-  border: none;
-  font-size: 18px;
-  padding: 10px 20px;
-  border-radius: 20px;
-  color: white;
-  font-weight: 700;
-  transition: .3s;
 }
 
 i.fa-chevron-right {
@@ -449,15 +406,15 @@ i.fa-chevron-right {
   transition: .3s;
 }
 
-button.button-4:hover {
+button.btn4:hover {
   background-color: #03333a;
 }
 
-button.button-4:hover i.fa-chevron-right {
+button.btn4:hover i.fa-chevron-right {
   opacity: 1;
 }
 
-/* section 7*/
+/* section restaurants*/
 
 .restaurants {
   width: 100%;
@@ -484,14 +441,11 @@ button.button-4:hover i.fa-chevron-right {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px;
 }
 
-
-
 .restaurants .wrap div img {
   width: 35%;
   float: left;
   padding: 15px;
 }
-
 
 .restaurants .wrap div h3 {
   padding: 10px 0 0 0;
@@ -501,7 +455,6 @@ button.button-4:hover i.fa-chevron-right {
 .restaurants .wrap div h4 {
   font-weight: 400;
 }
-
 
 .restaurants .wrap div p {
   font-family: 'Open Sans', sans-serif;
@@ -529,29 +482,21 @@ footer {
 footer .wrap>div {
   width: 300px;
   color: #fff;
-  font-family: 'Open Sans', sans-serif;
   margin: 20px 15px 0 15px;
-  font-size: 18px;
 }
 
 footer .wrap div img {
   width: 60%;
 }
 
-button.button-5 {
+button.btn5 {
   display: inline-block;
-  background-color: #e94f3d;
-  border: none;
   padding: 8px 18px;
   font-size: 16px;
-  border-radius: 20px;
-  color: white;
-  font-weight: 700;
-  transition: 0.3s;
   border: 2px solid transparent;
 }
 
-button.button-5:hover {
+button.btn5:hover {
   background-color: #004856;
   border: 2px solid white;
 
@@ -560,6 +505,7 @@ button.button-5:hover {
 footer .wrap .iconsoc {
   width: 10%;
   margin-top: 25px;
+  padding: 0 5px;
 }
 
 .job p {
@@ -586,7 +532,7 @@ form input {
   color: white;
 }
 
-button.button-6 {
+button.btn6 {
   border: 2px solid white;
   border-left: none;
   background-color: #e94f3d;
@@ -618,7 +564,6 @@ div.footer {
   text-align: center;
   color: white;
   padding: 10px 5px;
-  font-family: 'Open Sans', sans-serif;
   font-size: 12px;
 }
 
@@ -673,7 +618,7 @@ div.footer {
     transform: translate(-50%, -50%);
   }
 
-  button.button-1 {
+  button.btn1 {
     position: absolute;
     bottom: 10%;
     left: 50%;
@@ -730,7 +675,7 @@ div.footer {
     padding: 5px 0 15px 0;
   }
 
-  button.button-2 {
+  button.btn2 {
     margin-top: 50px
   }
 
@@ -974,7 +919,7 @@ div.footer {
     display: none;
   }
 
-  button.button-1 {
+  button.btn1 {
     position: absolute;
     bottom: 20%;
     left: 50%;
